# index.js
@@ -26,6 +26,10 @@ import { ExpressAdapter } from '@nestjs/platform-express';
 import { AppModule } from './nest/app.module';
 import { SwaggerModule, DocumentBuilder } from '@nestjs/swagger';
 import { parseError } from "./utils";
+import mongoose from 'mongoose';
+import TelegramConnectionManager from './nest/components/Telegram/TelegramConnectionManager';
+import { UsersService } from './nest/components/users/users.service';
+import { User, UserSchema } from './nest/components/users/schemas/user.schema';
 
 const timeOptions = { timeZone: 'Asia/Kolkata', timeZoneName: 'short' };
 process.on('unhandledRejection', (reason, promise) => {
@@ -948,10 +952,11 @@ app.get('/connectclient2/:number', async (req, res) => {
 
 // Second API to create the client when the button is clicked
 app.get('/cc/:number', async (req, res) => {
+ const connections =  TelegramConnectionManager.getInstance()
   const number = req.params?.number;
-  if (!hasClient(number)) {
+  if (!connections.hasClient(number)) {
     console.log("In createclient - ", req.ip);
-    const cli = await createClient(number, /* Add user session here */);
+    const cli =  connections.createClient(number)
     if (cli) {
       res.send("client created");
     } else {
@@ -964,13 +969,14 @@ app.get('/cc/:number', async (req, res) => {
 
 
 app.get('/connectclient/:number', async (req, res) => {
+  const connections =  TelegramConnectionManager.getInstance()
   const number = req.params?.number;
-  const db = ChannelService.getInstance();
-  const user = await db.getUser({ mobile: number });
+  const user = (await usersService.search({ mobile: number }))[0]
+  console.log(user);
   if (user) {
-    if (!hasClient(user.mobile)) {
+    if (!connections.hasClient(user.mobile)) {
       console.log("In connectclient - ", req.ip)
-      const cli = await createClient(user.mobile, user.session);
+      const cli = await connections.createClient(user.mobile, user.session);
       if (cli) {
         res.send("client created");
       } else {
@@ -1655,7 +1661,9 @@ const document = SwaggerModule.createDocument(nestApp, config);
 SwaggerModule.setup('api', nestApp, document);
 
 await nestApp.init();
+let usersService; 
 app.listen(port, async () => {
+  usersService = new UsersService(mongoose.model(User.name, UserSchema))
   console.log(`Example app listening at http://localhost:${port}`)
 });
 
